--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,10 @@ web:
   command: thin start
 
 db:
-  image: mariadb
+  image: opensuse/mariadb
   environment:
-    MYSQL_ROOT_PASSWORD: portus
+    MYSQL_USER: portus
+    MYSQL_PASS: portus
 
 registry:
   extends:
